docs: fix swagger docs
