# docs/swagger.yaml
@@ -244,7 +244,7 @@ paths:
             $ref: '#/definitions/web.HTTPError'
       summary: Get tasks by column id
       tags:
-      - columns
+      - tasks
   /comments:
     get:
       description: get all comments
@@ -854,7 +854,7 @@ paths:
             $ref: '#/definitions/web.HTTPError'
       summary: Get comments by task id
       tags:
-      - tasks
+      - comments
     post:
       consumes:
       - application/json
